# rust-compile-crash-repro

./: Cargo.toml  main.not.rs
.cargo/: config.toml
src/: main.rs
