[package]
name = "esp-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { git = "https://github.com/i404788/esp-hal.git", branch = "repro-ver", features = ["esp32s3", "usb-host", "defmt"] }
esp-hal-embassy = { git = "https://github.com/i404788/esp-hal.git", branch = "repro-ver", features = ["esp32s3"]}
esp-backtrace      = { version = "0.13.0", features = ["esp32s3", "exception-handler", "defmt"] }
esp-println        = { version = "0.10.0", features = ["esp32s3", "defmt-espflash"] }
esp-alloc          = "0.4.0"

embassy-executor   = { git = "https://github.com/i404788/embassy.git", rev = "df729bf", features = ["nightly", "defmt"] }
embassy-usb-driver = { git = "https://github.com/i404788/embassy.git", rev = "df729bf"}
embassy-usb = { git = "https://github.com/i404788/embassy.git", rev = "df729bf", features = ["defmt"]}
embassy-time       = { git = "https://github.com/i404788/embassy.git", rev = "df729bf", features = ["generic-queue-8"] }

defmt = {version = "0.3.8", features = ["alloc"]}
anyhow = { version = "1.0.93", default-features = false }

[patch.crates-io]
embassy-sync = { git = "https://github.com/i404788/embassy.git", rev = "df729bf"}
embassy-futures = { git = "https://github.com/i404788/embassy.git", rev = "df729bf"}
embassy-time = { git = "https://github.com/i404788/embassy.git", rev = "df729bf"}
embassy-executor = { git = "https://github.com/i404788/embassy.git", rev = "df729bf"}

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false
